legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr83222.c-5.4.0-0.out.txt
pr83222.c:4:18: error: initializer element is not constant
 const double b = (double) a;
                  ^
pr83222.c:5:18: error: initializer element is not constant
 const double c = a;
                  ^
pr83222.c:6:12: error: initializer element is not constant
 double d = (double) a;
            ^
pr83222.c:7:12: error: initializer element is not constant
 double e = a;
            ^
pr83222.c:8:18: error: initializer element is not constant
 const double f = 1 + (double) a;
                  ^
pr83222.c:9:18: error: initializer element is not constant
 const double g = 1 + a;
                  ^
pr83222.c:10:12: error: initializer element is not constant
 double h = 1 + (double) a;
            ^
pr83222.c:11:12: error: initializer element is not constant
 double i = 1 + a;
            ^
pr83222.c:12:16: error: initializer element is not constant
 double j[] = { (double) a, a, 1 + (double) a, 1 + a };
                ^
pr83222.c:12:16: note: (near initialization for ‘j[0]’)
pr83222.c:12:28: error: initializer element is not constant
 double j[] = { (double) a, a, 1 + (double) a, 1 + a };
                            ^
pr83222.c:12:28: note: (near initialization for ‘j[1]’)
pr83222.c:12:31: error: initializer element is not constant
 double j[] = { (double) a, a, 1 + (double) a, 1 + a };
                               ^
pr83222.c:12:31: note: (near initialization for ‘j[2]’)
pr83222.c:12:47: error: initializer element is not constant
 double j[] = { (double) a, a, 1 + (double) a, 1 + a };
                                               ^
pr83222.c:12:47: note: (near initialization for ‘j[3]’)
pr83222.c: In function ‘foo’:
pr83222.c:17:27: error: initializer element is not constant
   static const double k = (double) a;
                           ^
pr83222.c:18:27: error: initializer element is not constant
   static const double l = a;
                           ^
pr83222.c:19:27: error: initializer element is not constant
   static const double m = 1 + (double) a;
                           ^
pr83222.c:20:27: error: initializer element is not constant
   static const double n = 1 + a;
                           ^
